need to fix arrow alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
-
 *, *:before, *:after {
   box-sizing: border-box;
 }
-
 
 body {
   background-color: #333;
@@ -10,72 +8,79 @@ body {
   font-size: 10px;
 }
 
-.arrow-left {
+section {
+  width: 420px;
+}
+
+.container {  /* when scrolling the nav bar moves -- not sure where to address this*/
   box-sizing: border-box;
-  background-color: #000;
-  display: inline-block;
-  width: 100%;
+  background-color: #fff;
+  /* float: left; moves container over to left, unresponsive*/
+  /* display: inline-block; */ /*unresponsive*/
   border: 1px solid #000;
-  margin: 0%;
-  padding: 5px;
-}
-
-.arrow {
-  display: inline;
-  padding-left: 100%;
-  width: 100%;
-  padding: 0px;
-  margin: 0%;
-  float: right;
-}
-
-.container {
-  box-sizing: border-box;
-  background-color: #aaa;
-  float: left;
+  padding-left: 0px;
+  padding-top: 0px;
+  position: fixed;
+  margin: 7%;
   width: 420px;
-  border: 2px solid #000;
-  margin: 4%;
-  padding: 5px;
-}
-
-.content {
-  width: 100%;
-  display: ;
-  border-bottom: 1px solid #000;
-  margin: 5px 0 2px 2px;
-}
-
-.content h1 {
-  display: inline;
-  font-size: 12px;
-  font-weight: bold;
-  margin: 1px;
-}
-
-.content h3 {
-  display: block;
-  margin-bottom: 2%;
-}
-
-.location {
-  width: 420px;
-}
-
-.location :hover {
-  width: 100%%;
-  background-color: #919191;
 }
 
 nav {
   box-sizing: border-box;
   background-color: #000;
-  margin: 0%;
-  float: left;
-  padding: 1%;
-  width: 100%;
+  /*float: left; doesn't do anything -- maybe needs to move within arrow-left?*/
+  /* display: inline; */
+  /* margin: 0px auto; */
+  padding: 0;
+  position: fixed;
+  width: 418px;
+}
+
+.arrow-left {
+  background-color: #000;
+  padding: 7px;
+}
+
+.location {
+  /* box-sizing: border-box;*/
+  width: 420px;
+  /* margin: 0px; /*moves text away from border of container*/
+  /*padding: 0;*/
+  border-bottom: .75px solid #000;
+}
+
+.arrow {
+  box-sizing: border-box;
+  /* display: inline; */
+  float: right;
+  margin-right: 15px;
+  width: ;
+  /* margin-bottom: 15px; */
+  /* padding-bottom: 0px; */
+}
+
+/* does .fa class (within arrow) do anything?
+.fa fa-chevron-right fa-2x {
+  float: right;}  /*unresponsive*/
+
+.location :hover {
+  background-color: #ccc;
+}
+
+.content {
+  padding: 10px 0 10px 20px;
+  display: block;
+  width: 100% auto;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 12px;
 }
 
 .restaurant-list {
-padding-top: 50px;
+  box-sizing: border-box;
+  padding-top: 34px;
+/*  border: 0 0 20px 15px;
+  width: 100%; */ /*unresponsive*/
 }
